Add comprehensive javadocs to collection classes